# leptos-i18n-compile-error

./: Cargo.toml  README.md  input.css  tailwind.config.js
app/: Cargo.toml
app/locales/en/: common.json  home.json  search_project.json  submit_project.json
app/locales/fr/: common.json  home.json  search_project.json  submit_project.json
app/locales/nl/: common.json  home.json  search_project.json  submit_project.json
app/src/: lib.rs
app/src/component/: mod.rs  svg.rs  swiper.rs
app/src/page/: home.rs  mod.rs  search_project.rs  submit_project.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
